[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-meshtastic-bridge"
version = "0.1.19"
description = "Reliable offline bridge for Atlas Command over Meshtastic radios."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "ATLAS Team" },
]
keywords = [
    "atlas",
    "meshtastic",
    "bridge",
    "mesh",
    "telemetry",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "atlas-asset-client>=0.3.0",
    "msgpack>=1.0.7",
    "zstandard>=0.22.0",
]

[project.optional-dependencies]
meshtastic = [
    "meshtastic>=2.3.0",
    "pypubsub>=4.0.3",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/the-Drunken-coder/ATLAS"
Repository = "https://github.com/the-Drunken-coder/ATLAS"

[tool.setuptools.packages.find]
where = [
    "src",
]
include = [
    "atlas_meshtastic_bridge",
    "atlas_meshtastic_bridge.*",
]

[tool.setuptools.package-data]
"atlas_meshtastic_bridge.modes" = [
    "*.json",
]

[tool.ruff]
ignore = [
    "E402",
]
